--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,11 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <script>
+    window.images = {
+      marvel: "<%= image_path("marvel_logo.png") %>",
+    }
+  </script>
 </head>
 <body>
 
