--- a/app/assets/stylesheets/spinner.scss
+++ b/app/assets/stylesheets/spinner.scss
@@ -1,10 +1,10 @@
 .spinner {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #db3c32; /* Blue */
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #db3c32;
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  animation: spin 1.5s linear infinite;
+  animation: spin 1.75s linear infinite;
   margin: 50px auto;
 }
 
