--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -3,6 +3,8 @@
   height: 20%;
   background: #db3c32;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  padding: 50px 0;
+  align-items: center;
+  padding: 50px 0 20px 0;
 }
