--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
   <script>
     window.images = {
       marvel: "<%= image_path("marvel_logo.png") %>",
+      heartOn: "<%= image_path("heart_on.png") %>",
+      heartOff: "<%= image_path("heart_off.png") %>",
+      heartHover: "<%= image_path("heart_hover.png") %>",
     }
   </script>
 </head>
