--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,14 @@
 .header {
   width: 100%;
-  height: 20%;
+  height: 180px;
   background: #db3c32;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0 20px 0;
+  padding: 40px 0 20px 0;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  opacity: 0.9;
 }
